index-web-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: "test-selfsigned"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
  name: myIngress
spec:
  rules:
  - host: 35.226.164.101.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: index-web-service
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - 35.226.164.101.nip.io
    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
